--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,10 @@
   "version": 2,
   "builds": [
     {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
+    },
+    {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
@@ -14,27 +18,23 @@
       "config": {
         "distDir": "dist"
       }
-    },
-    {
-      "src": "api/**/*.js",
-      "use": "@vercel/node"
     }
   ],
   "routes": [
+    {
+      "src": "/api/admin/(.*)",
+      "dest": "/api/admin/$1"
+    },
     {
       "src": "/api/(.*)",
       "dest": "/api/$1"
     },
     {
-      "src": "/admin/(.*)",
-      "dest": "/admin/$1"
+      "src": "/admin(.*)",
+      "dest": "/admin$1"
     },
     {
-      "src": "/admin",
-      "dest": "/admin/index.html"
-    },
-    {
-      "src": "/(.*)",
+      "src": "/((?!api|admin).*)",
       "dest": "/frontend/$1"
     }
   ]
