--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,25 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    },
+    {
+      "src": "admin/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
   "routes": [
     {
       "src": "/api/admin/auth",
@@ -23,15 +43,15 @@
     },
     {
       "src": "/admin",
-      "dest": "/admin/dist/index.html"
+      "dest": "/admin/index.html"
     },
     {
       "src": "/admin/(.*)",
-      "dest": "/admin/dist/$1"
+      "dest": "/admin/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/dist/$1"
+      "dest": "/frontend/$1"
     }
   ]
 }
