--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vercel dev"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0"
+    "@supabase/supabase-js": "^2.39.0",
+    "jsonwebtoken": "^9.0.0"
   }
 }
